--- a/web.config
+++ b/web.config
@@ -38,6 +38,18 @@
       <remove statusCode="404" />
       <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
     </httpErrors>
+    <rewrite>
+      <rules>
+        <rule name="Redirect dmv-areas.html to dmv-shuttle-service" stopProcessing="true">
+          <match url="^dmv-areas\.html$" ignoreCase="true" />
+          <action type="Redirect" url="/dmv-shuttle-service.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect index.html to root" stopProcessing="true">
+          <match url="^index\.html$" ignoreCase="true" />
+          <action type="Redirect" url="/" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
     <!--<rewrite>
       <rules>
         <rule name="HTTP to HTTPS redirect" stopProcessing="true">
