--- a/web.config
+++ b/web.config
@@ -84,4 +84,14 @@
   <connectionStrings>
     <add name="Frederick_ConnectionString" connectionString="Data Source=A2NWPLSK14SQL-v01.shr.prod.iad2.secureserver.net;Initial Catalog=dbfrederick;Persist Security Info=True;User ID=dbfrederick;Password=Dbfrederick@#12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <location path="dmv-areas.html">
+    <system.webServer>
+      <httpRedirect enabled="true" destination="/dmv-shuttle-service.html" httpResponseStatus="Permanent" />
+    </system.webServer>
+  </location>
+  <location path="index.html">
+    <system.webServer>
+      <httpRedirect enabled="true" destination="/" httpResponseStatus="Permanent" />
+    </system.webServer>
+  </location>
 </configuration>
