--- a/web.config
+++ b/web.config
@@ -1,3 +1,4 @@
+@ -1,97 +1,31 @@
 <?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -95,3 +96,29 @@
     </system.webServer>
   </location>
 </configuration>
+<?xml version="1.0"?>
+<configuration>
+  <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" />
+      <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+    </httpErrors>
+    <rewrite>
+      <rules>
+        <rule name="Redirect dmv-areas.html to dmv-shuttle-service" stopProcessing="true">
+          <match url="^dmv-areas\.html$" ignoreCase="true" />
+          <action type="Redirect" url="/dmv-shuttle-service.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect index.html to root" stopProcessing="true">
+          <match url="^index\.html$" ignoreCase="true" />
+          <action type="Redirect" url="/" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
+  <location path="dmv-areas.html">
+    <system.webServer>
+      <httpRedirect enabled="true" destination="/dmv-shuttle-service.html" httpResponseStatus="Permanent" />
+    </system.webServer>
+  </location>
+</configuration> 
