--- a/.htaccess
+++ b/.htaccess
@@ -25,7 +25,7 @@ Redirect 301 /iad-dulles-international-airport-limos-service.html /iad-limo-serv
 Redirect 301 /school-transportation-shuttle-service.html /private-school-transportation.html
 Redirect 301 /corporate-limo-service.html /corporate-transportation-services.html
 Redirect 301 /luxury-wine-tour-limousine-transportation-service.html /winery-and-city-tours.html
-Redirect 301 /airport-limo-service.html /baltimore-airport-transportation.html
+Redirect 301 /airport-limo-service.html /baltimore-shuttle-service.html
 Redirect 301 /exclusive-shuttle-service.html /bwi-shuttle-service.html
 Redirect 301 /hourly-limo-service.html /baltimore-hourly-limo-service.html
 Redirect 301 /limousine-party-services.html /baltimore-d.C-party-limo-service.html
@@ -46,7 +46,7 @@ Redirect 301 /mcleaan-shuttle-service.html /mclean-shuttle-service.html
 Redirect 301 /washington-dc-tour-limo-service.html /sprinter-vans-buses-group-transportation.html
 Redirect 301 /Luxury-wine-tour-limousine-transportation-service.html /winery-and-city-tours.html
 Redirect 301 /Alexandra-VA.html /alexandria-va-shuttle-service.html
-Redirect 301 /Washinton-D.Cl /washington-d.c-shuttle-service.html
+Redirect 301 /Washinton-D.Cl /shuttle-service-washington-dc.html 
 Redirect 301 /iad-dulles-international-airport-limos-service.html /iad-limo-service-dulles-car-service.html
 Redirect 301 /Dca-airport-transfers-limos-service.html /dca-shuttle-service-dca-car-service.html
 Redirect 301 /limousine-party-services.html /baltimore-d.c-party-limo-service.html
@@ -71,7 +71,7 @@ Redirect 301 /annandale-va.html /annandale-va-shuttle-service.html
 Redirect 301 /annapolis.html /annapolis-shuttle-service.html
 Redirect 301 /tyson-va-shuttle-service.html /tysons-va-shuttle-service.html
 Redirect 301 /silver-spring-md.html /silver.spring-md-shuttle-service.html
-Redirect 301 /washington-d.c.html /washington-d.c-shuttle-service.html
+Redirect 301 /washington-d.c.html /shuttle-service-washington-dc.html 
 Redirect 301 /columbia-md.html /columbia-md-shuttle-service.html
 Redirect 301 /oxon-hills-md.html /oxon-hills-md-shuttle-service.html
 Redirect 301 /springfield-VA.html /springfield-va-shuttle-service.html
@@ -80,3 +80,5 @@ Redirect 301 /arlington.va.html /arlington-va-shuttle-service.html
 Redirect 301 /baltimore.html /baltimore-shuttle-service.html
 Redirect 301 /gaithersburg.html /gaithersburg-md-shuttle-service.html
 Redirect 301 /About-us.html /about-us.html
+Redirect 301 /washington-d.c-shuttle-service.html /shuttle-service-washington-dc.html
+Redirect 301 /baltimore-shuttle-service.html /baltimore-shuttle-service.html 
